[tool.poetry]
name = "aad-pricing"
version = "0.1.0"
description = "Pricing tool to compute brass rod prices from raw materials, and some order parameters. This code computes the total order price and price sensitivity to raw material market changes."
authors = ["Quincy van den Berg <32027910+qvandenberg@users.noreply.github.com>"]
readme = "ReadMe.md"
license = "BSD-3-Clause"
repository = "https://github.com/qvandenberg/bbg-aad"
packages = [
    { include = "aad_pricing", from = "src" },
]

[tool.poetry.scripts]
my-cli = 'aad_pricing.index:run'

[tool.poetry.dependencies]
python = "^3.8"
dash = "2.4.1"
numpy = "^1.22.4"
plotly = "^5.15.0"
dash-bootstrap-components = "^1.1.0"
gunicorn = "^20.1.0"
isort = "^5.5.2"
itsdangerous = "1.1.0"
markupsafe = "1.1.1"
typing-extensions = "^3.10.0.0"
werkzeug = "2.0.3"
pandas = "1.5.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-reportlog = "^0.3.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
